<resources>
    <string name="app_name">Kotlin MVVM Clean Arc</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="responsibilities">Responsibilities</string>
    <string name="duration">Duration</string>
    <string name="technologies_used">Technologies used</string>
    <string name="professional_summary">Professional Summary</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="bright_owusu_amankwaa">Bright Owusu-Amankwaa</string>
    <string name="contact">Contact</string>
    <string name="title_activity_home_new">ActivityHomeNew</string>
    <string name="prev_exp">Previous Experiences</string>
    <string name="no_connection">No connection</string>
    <string name="back_online">Back online</string>
</resources>
